<resources>
    <string name="app_name">Storage Scanner</string>
    <string name="button_start_scan_label">Start scan</string>
    <string name="button_stop_scan_label">Stop scan</string>
    <string name="permission_denied">Without permission to access storage application is useless.</string>
    <string name="scan_notification_title">SD Card scanner</string>
    <string name="scan_notification_text">Scann in progress</string>
    <string name="scan_notification_done_text">Scan completed</string>
    <string name="scan_notification_cancelled_text">Scan cancelled</string>
    <string name="button_largest_files">Show largest files</string>
    <string name="button_extensions">Show extensions analysis</string>
    <string name="button_share">Share results</string>
    <string name="button_average_size">Show average file size</string>
    <string name="share_results">Share results with...</string>
    <string name="average_length">Average file length size is </string>
</resources>
